Fix long server name header overflow bug

--- a/app/assets/stylesheets/server/servers.scss
+++ b/app/assets/stylesheets/server/servers.scss
@@ -145,7 +145,7 @@
     min-height: 48px;
     width: 100%;
     padding: 0px 16px;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: bold;
     color: white;
     box-shadow: var(--elevation-low);
